--- a/source/ehr-integration/index.html.slim
+++ b/source/ehr-integration/index.html.slim
@@ -32,7 +32,7 @@ section.hide-for-large
       .bg-white.pad--lg
         h2.headline-2 Is the stress of hospital integrations holding your business back?
         h2.headline-3.text-bold.group Activate your digital health product with data from any EHR enables EHR integrations at scale.
-        = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration#cta", :button_classes => "button nomargin", :data_track_group => "integration", :item_id => "get-integration-mobile", :icon => "icon-chevron-right", :icon_align => "right" }
+        = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/integrate#cta", :button_classes => "button nomargin", :data_track_group => "integration", :item_id => "get-integration-mobile", :icon => "icon-chevron-right", :icon_align => "right" }
 section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-image--center.lozad data-background-image="#{featured_img}?fit=thumb&w=1800&h=900&q=65"
   .row.align-right.align-middle
     .columns.small-12.medium-6
@@ -42,7 +42,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-im
         .bg-white.pad--lg
           h2.headline-3.text-bold Activate your digital health product with data from any EHR
           p.lead You've created an amazing healthcare application, now it's time to grow by exchanging data with more EHRs. Datica enables EHR integrations at scale.
-          = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration#cta", :button_classes => "button nomargin dark", :data_track_group => "integration", :item_id => "get-integration-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/integrate#cta", :button_classes => "button nomargin dark", :data_track_group => "integration", :item_id => "get-integration-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
 .strip.strip-cmi
 
 / section#top.section-article.bg-gray-11.container-image-fill.lozad data-background-image="?fit=crop&w=1600&h=800"
@@ -76,7 +76,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
           .strip.strip-small.strip-cmi.margin-bottom-small
           p.lead Standards-based integration with any EHR
       p.lead We combine cutting-edge automation of cloud infrastructure security, DevOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
-      = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-cmi", :icon => "icon-chevron-right", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/integrate/", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-cmi", :icon => "icon-chevron-right", :icon_align => "right" }
     .columns.small-12.medium-8.large-6.group
       .media-object
         .media-object-section
@@ -102,7 +102,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
   .row
     .columns.small-12.medium-6.large-6.group
       p.lead.group Our team of cloud engineers, integration and compliance experts can help you assessyour business challenges, ensure complete compliance on the cloud, integrate with any system, and even migrate your data to a new, efficient, and cost-effective cloud platform.
-      = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-services", :icon => "icon-chevron-right", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/integrate#services", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-services", :icon => "icon-chevron-right", :icon_align => "right" }
     .columns.small-12.medium-6.large-6
       h4.headline-5 Project Management
       p Our team of project managers provides an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
@@ -165,5 +165,5 @@ aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-bac
         .columns.shrink
           = partial "partials/snippets/button", :locals => { :label => "Learn more about EHR integration", :url => "/discover/ehr-integrations", :button_classes => "button hollow-inverted" }
         .columns.shrink
-          = partial "partials/snippets/button", :locals => { :label => "Start your integration project today", :url => "/compliant-managed-integration/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :data_track_group => "integration", :item_id => "get-integration-bottom" }
+          = partial "partials/snippets/button", :locals => { :label => "Start your integration project today", :url => "/integrate/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :data_track_group => "integration", :item_id => "get-integration-bottom" }
     .blob-color.blob-cmi.z-auto data-glow="false"
