--- a/source/partials/content/_stats-integration.slim
+++ b/source/partials/content/_stats-integration.slim
@@ -1,7 +1,7 @@
 - if defined?(classes) ? classes = classes : nil
-.row.small-up-2.medium-up-4.large-up-5.xlarge-up-6.align-center.text-center.text-small class=classes
+.row.small-up-2.medium-up-4.large-up-5.xlarge-up-5.align-center.text-center.text-small class=classes
   .column
-    span.headline-3.text-bold 200+
+    span.headline-3.text-bold 300+
     p Live integrations completed
   / .column
   /   span.headline-1.text-bold 32+
@@ -15,6 +15,6 @@
   .column
     span.headline-3.text-bold Zero
     p Unexpected downtime three years in a row
-  .column
-    span.headline-3.text-bold 100%
-    p Built with open-source tech
+  / .column
+  /   span.headline-3.text-bold 100%
+  /   p Built with open-source tech
