--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -87,7 +87,7 @@ scss:
             /= inline_svg("cmi-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.margin-bottom-small.text-regular
-              a href="/compliant-managed-integration" title="Compliant Managed Integration" Compliant Managed Integration
+              a href="/integrate" title="Compliant Managed Integration" Compliant Managed Integration
             h4.headline-6.text-regular.nomargin Product Subscription (Required)
             p CMI product currently available on AWS or Azure. We deploy it into Datica's existing cloud account. All infrastructure costs, like RAM and storage, are absorbed by Datica. We then maintain all DevOps, security, compliance, and networking duties related to the integration stack itself and all live integrations it powers.
             h4.headline-6.text-regular.nomargin Service Subscription (Optional)
