--- a/source/_emissary/_index.html.slim
+++ b/source/_emissary/_index.html.slim
@@ -1,7 +1,7 @@
 ---
-title: "Datica Emissary | A scalable, centralized API for clinical data of any type"
-summary: "Emissary is a proven application programming interface (API) solution that allows healthcare information to be exchanged across any EHR platform – while ensuring the utmost security for PHI."
-navTitle: "Emissary"
+title: "Datica Integrate | Activate your digital health product with health data in any format, from any EHR"
+summary: "We handle the stress, risk and complexity of EHR integrations, so you can help medical teams do what they do best."
+navTitle: "Datica Integrate"
 author: "Datica, Inc."
 tags: "HL7, FHIR, interoperability, EHR, integration, API"
 ogType: "product"
@@ -23,7 +23,7 @@ subnav:
     title: "Benefits"
     slug: "benefits"
   -
-    title: "Emissary in Action"
+    title: "Datica Integrate in Action"
     slug: "video"
   # -
   #   title: "Comparison"
@@ -89,7 +89,7 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
           .media-object-section
             = inline_svg("emissary-icon-large-white", class: "masthead-icon")
           .media-object-section.media-object--info.main-section.align-self-middle
-            h1.headline-2 style="margin-bottom: 0.2rem;" Emissary<sup>®</sup>
+            h1.headline-2 style="margin-bottom: 0.2rem;" Datica Integrate<sup>®</sup>
             p.lead A scalable, centralized API for clinical data of any type
             = partial "partials/snippets/button", :locals => { :label => "Start Your Integration Project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
@@ -103,34 +103,34 @@ section.section-article.bg-gray-2.container-image-fill.lozad data-background-ima
     .columns.small-12.medium-8.large-5
       p.lead Why should health data exchange be so inefficient and costly, when information is easily – even instantaneously – accessible in almost all other aspects of our modern lives?
     .columns.small-12.medium-8.large-5
-      p.headline-3.text-bold Emissary helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
+      p.headline-3.text-bold Datica Integrate helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
 .strip.strip-greens.strip-small
 section.section-article.bg-gray-11 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   .row.align-center.align-middle
     .columns.small-12.medium-8.large-4
-      h3.headline-3 Emissary is a proven API solution
-      p.lead Emissary is a proven application programming interface (API) solution that allows healthcare information to be exchanged across any EHR platform – while ensuring the utmost security for PHI.
-      p Modern times call for modern measures. Emissary allows you to focus on your product – not on the integration. Within days, you are up and running with comprehensive APIs that work across EHRs.
-      = partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "##{current_page.data.subnav[3].slug}", :button_classes => "button success", :item_id => "product-emissary" }
+      h3.headline-3 Datica Integrate is a proven API solution
+      p.lead Datica Integrate is a proven application programming interface (API) solution that allows healthcare information to be exchanged across any EHR platform – while ensuring the utmost security for PHI.
+      p Modern times call for modern measures. Datica Integrate allows you to focus on your product – not on the integration. Within days, you are up and running with comprehensive APIs that work across EHRs.
+      = partial "partials/snippets/button", :locals => { :label => "Learn how Datica Integrate works", :url => "##{current_page.data.subnav[3].slug}", :button_classes => "button success", :item_id => "product-emissary" }
     .columns.small-12.medium-4.large-6
       img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/TvIRvb1AwzfXo7MsUHmJ6/df7185acdd6125ae327784c41f0de549/emissary-product-diagram-3.png" alt="emissary diagram"
 
 section.section-article.bg-gray-3
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
-      h3.headline-3 How is Datica Emissary different from Datica CMI?
+      h3.headline-3 How is Datica Integrate different from Datica CMI?
   .row.align-center
     .columns.small-12.medium-6.large-5
-      p.lead <a class="link--white" href="/compliant-managed-integration" title="Datica Compliant Managed Integration">Datica CMI</a> is a compliant application package that alleviates the hardships of working with standards-based interoperability, such as HL7v2 or FHIR.
+      p.lead <a class="link--white" href="/integrate" title="Datica Compliant Managed Integration">Datica CMI</a> is a compliant application package that alleviates the hardships of working with standards-based interoperability, such as HL7v2 or FHIR.
     .columns.small-12.medium-6.large-5
-      p.lead <strong>Datica Emissary</strong> is a centralized API toolset that is installed within the data systems on-site at the hospital, such as EHRs, thus giving unprecedented access, control, and scalability of clinical data.
+      p.lead <strong>Datica Integrate</strong> is a centralized API toolset that is installed within the data systems on-site at the hospital, such as EHRs, thus giving unprecedented access, control, and scalability of clinical data.
 
 .strip.strip-small.strip-greens
 section.section-article.bg-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
   .row.align-center
     .columns.small-12.medium-10.large-8
-      h3.headline-3 Hello Emissary. Goodbye data silos.
-      p Emissary makes health data liquid. It provides a robust set of REST APIs that read and write to EHRs through EHR vendor-supported software modules. It standardizes EHR integration through universal real-time APIs and a unified data model. To connect to an EHR, health IT partners code once to the Emissary APIs. Emissary also provides tools to assist with the monitoring and management of the environment, including advanced security and auditing features.
+      h3.headline-3 Hello Datica Integrate. Goodbye data silos.
+      p Datica Integrate makes health data liquid. It provides a robust set of REST APIs that read and write to EHRs through EHR vendor-supported software modules. It standardizes EHR integration through universal real-time APIs and a unified data model. To connect to an EHR, health IT partners code once to the Datica Integrate APIs. Datica Integrate also provides tools to assist with the monitoring and management of the environment, including advanced security and auditing features.
       .row.small-up-1.medium-up-2.collapse
         - current_page.data.product_benefits.each do | item |
           .column.group--sm
@@ -146,20 +146,20 @@ section.section-article.bg-gray-12 id=current_page.data.subnav[2].slug data-mage
 section.section-article.bg-dark.strip-greens-dark id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
   .row.align-center.align-middle
     .columns.small-12.medium-8.large-5
-      h3.headline-3.text-bold See Emissary in action
-      p.lead We’re solving health IT’s most pressing challenge today. Our Emissary platform enables seamless data exchange between EHRs and with leading-edge administration and clinical applications.
-      p.lead See how Emissary enables complete, real-time access to patient records, preventing a life-threatening condition that otherwise would be missed.
-      /= partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button success", :item_id => "product-emissary" }
+      h3.headline-3.text-bold See Datica Integrate in action
+      p.lead We’re solving health IT’s most pressing challenge today. Our Datica Integrate platform enables seamless data exchange between EHRs and with leading-edge administration and clinical applications.
+      p.lead See how Datica Integrate enables complete, real-time access to patient records, preventing a life-threatening condition that otherwise would be missed.
+      /= partial "partials/snippets/button", :locals => { :label => "Learn how Datica Integrate works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button success", :item_id => "product-emissary" }
     .columns.small-12.medium-4.large-6
       = Kramdown::Document.new(data.site.videos["y0y8MVijxDirsUyvbYzUa"].custom_form).to_html  
 
 /section.section-article.bg-white id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
   .row.align-center
     .columns.small-12.medium-10.large-8
-      h3.headline-3 How does Emissary compare with other integration models?
-      p Our universal, powerful APIs work across EHRs, enabling health IT innovators to focus on building great products, not painful EHR integrations. And by leveraging our advanced APIs – built to streamline today’s complex workflows – Emissary users install faster, with 75% less effort.
+      h3.headline-3 How does Datica Integrate compare with other integration models?
+      p Our universal, powerful APIs work across EHRs, enabling health IT innovators to focus on building great products, not painful EHR integrations. And by leveraging our advanced APIs – built to streamline today’s complex workflows – Datica Integrate users install faster, with 75% less effort.
       img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/2mjxcfsRmGJU9IfXPtrDdS/50374e8d6845345940868350559e2abe/emissary-comparison-chart-dark-on-light.png" width="100%"
-      /= partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button", :item_id => "product-emissary" }
+      /= partial "partials/snippets/button", :locals => { :label => "Learn how Datica Integrate works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button", :item_id => "product-emissary" }
 
 /= partial("/partials/section-promos/tco-integration-banner", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.ctfassets.net/189dvqdsjh46/1iP2tqSCPKuIY6gIakoWcM/c954e6875e22448528da37b912f8aca4/triangle_theme__darker__Dallas_Ball__-_ash-edmonds-636863-unsplash.jpg" })
 
@@ -182,7 +182,7 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
   .section-article--lg.relative.z-10
     .row.align-center.align-middle
       .columns.small-12.medium-6.large-5
-        h2.headline-3.group--2x Schedule a conversation to learn more about Datica Emissary.
+        h2.headline-3.group--2x Schedule a conversation to learn more about Datica Integrate.
         / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
         .callout.callout--dark-alpha
           blockquote.quote--serif
