Copy changes, misc
#193

--- a/source/integrate/index.html.slim
+++ b/source/integrate/index.html.slim
@@ -177,7 +177,7 @@ section.section-article.bg-gray-3 id=current_page.data.subnav[2].slug data-magel
           li Mirth interface engine
           li Postgres database
           li Highly Available and redundant configuration
-          li HITRUST CSF Certified cloud infrastructure
+          / li HITRUST CSF Certified cloud infrastructure
           li Compliant logging and auditing of activity
           li REST API endpoints mapped to all major data standards
           li VPN setup for secure connectivity
